global profile section layout

--- a/source/_banner.html.erb
+++ b/source/_banner.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="presentation">
       <h1>Julien Da Silva</h1>
-      <p>Web Developper</p>
+      <h4>Web Developper</h4>
       <a href="#1" class="">
         <span class="glyphicon glyphicon-chevron-down hidden-xs"></span>
       </a>
