--- a/source/_profile.html.erb
+++ b/source/_profile.html.erb
@@ -3,7 +3,7 @@
     <div class="profile padded" id="1">
       <div class="centered-sentences">    
         <h2>Profile</h2>
-        <p>I'm a creative Ruby on Rails developper </p>
+        <h6>I'm a creative Ruby on Rails developper </h6>
       </div>
         <hr>
       <div class="row">
