--- a/source/stylesheets/components/_banner.scss
+++ b/source/stylesheets/components/_banner.scss
@@ -22,7 +22,7 @@
     top: 18vh;
   }
   h1 {
-    font-size: 4em;
+    // font-size: 3em;
     font-weight: 300;
     // letter-spacing: 0.055em;
     padding-bottom: 11px;
@@ -30,8 +30,8 @@
     border-bottom-color: rgba(255,255,255,0.35);
     // z-index: 2;
   }
-  p {
-    font-size: 2em;
+  h4 {
+    // font-size: 2em;
     font-weight: 300;
     color: rgba(255, 255, 255, 0.8);
     // margin-bottom: 15px;
