--- a/source/stylesheets/components/_avatar.scss
+++ b/source/stylesheets/components/_avatar.scss
@@ -14,9 +14,11 @@
 
 .centered-sentences {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  border-bottom: 1px solid rgba(114, 120, 120, 0.2);
+  padding: 1em;
   h2 {
     letter-spacing: 0.04em;
     font-weight: 300;
@@ -38,15 +40,9 @@
   line-height: 0.9;
   padding-bottom: 10px;
 }
-
 h3 {
   font-weight: 300;
   color: #22A39F;
-}
-hr { 
-  margin: 40px 0px;
-  border-color: #727878;
-  opacity: 0.2;
 }
 #italic {
   font-style: italic;
