--- a/source/_profile.html.erb
+++ b/source/_profile.html.erb
@@ -1,14 +1,13 @@
 <div class="wrapper-white">
   <div class="container">
     <div class="row">
+      <div class="profile" id="1">
       <div class="col-xs-12">
         <div class="centered-sentences">    
           <h2>Profile</h2>
           <h6>I'm a creative Ruby on Rails developper </h6>
         </div>
-        <!-- <hr> -->
       </div>
-      <div class="profile padded" id="1">
         <div class="row">
           <div class="col-xs-12 col-md-4">
             <div class="flex-center">
