--- a/source/_profile.html.erb
+++ b/source/_profile.html.erb
@@ -1,44 +1,42 @@
 <div class="wrapper-white">
-  <div class="container">
+  <div class="container padded">
     <div class="row">
-      <div class="profile" id="1">
       <div class="col-xs-12">
         <div class="centered-sentences">    
           <h2>Profile</h2>
           <h6>I'm a creative Ruby on Rails developper </h6>
         </div>
       </div>
-        <div class="row">
-          <div class="col-xs-12 col-md-4">
-            <div class="flex-center">
-              <div class="about-me">
-                <h3>About me</h3>
-                <p>I started to learn how to code after 8 years of tech experience in the Cinema industry. I wanted to know how the products I love are made and be able to prototype and work in team with other developpers. I joined Le Wagon bootcamp in Paris, I am now focused on improving my skills.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-md-4">
-            <div class="flex-center">
-              <div class="avatar">
-                <%= image_tag "avatar.jpg", class: "avatar-large" %>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-md-4">
-            <div id="unflex-mobile">
-              <div class="details">
-                <h3>Details</h3>
-                <p><strong>Name:</strong></p>
-                <p>Julien Da Silva</p>
-                <p><strong>Age:</strong></p>
-                <p>30</p>
-                <p><strong>Location:</strong></p>
-                <p>Paris, France</p>
-              </div>
-            </div>
-          </div>
+    </div>
+    <div class="row profile" id="1">
+      <div class="col-xs-12 col-md-4">
+        <div class="about-me">
+          <h4>About me</h4>
+          <p>I started to learn how to code after 8 years of tech experience in the Cinema industry. I wanted to know how the products I love are made and be able to prototype and work in team with other developpers. I joined Le Wagon bootcamp in Paris, I am now focused on improving my skills.</p>
         </div>
-      </div>     
+      </div>
+      <div class="col-xs-12 col-md-5">
+        <div class="picture">
+          <%= image_tag "avatar.jpg", class: "avatar" %>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-3">
+        <div class="unflex-mobile details">
+          <h4>Details</h4>
+            <div class="attributes">
+              <p class="attribute-name-bold">Name:</p>
+              <p>Julien Da Silva</p>  
+            </div>
+            <div class="attributes">
+              <p class="attribute-name-bold">Age:</p>
+              <p>31</p>
+            </div>
+            <div class="attributes">
+              <p class="attribute-name-bold">Location:</p>
+              <p>Paris, France</p>
+            </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
