added abilities html skeleton

--- a/source/_profile.html.erb
+++ b/source/_profile.html.erb
@@ -2,7 +2,7 @@
   <div class="container padded">
     <div class="row">
       <div class="col-xs-12">
-        <div class="centered-sentences">    
+        <div class="section_headers">    
           <h2>Profile</h2>
           <h6>I'm a creative Ruby on Rails developper </h6>
         </div>
