--- a/source/stylesheets/components/_index.scss
+++ b/source/stylesheets/components/_index.scss
@@ -1,4 +1,6 @@
 // Import your components CSS files here.
 @import "navbar";
 @import "banner";
+@import "section_headers";
 @import "profile";
+@import "abilities";
