--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,6 +14,7 @@
   <body>
     <%= partial "banner" %>
     <%= partial "profile" %>
+    <%= partial "abilities" %>
     <%= yield %>
   </body>
 </html>
