added social networks links to banner

--- a/source/_banner.html.erb
+++ b/source/_banner.html.erb
@@ -3,9 +3,15 @@
     <div class="presentation">
       <h1>Julien Da Silva</h1>
       <h4>Web Developper</h4>
-      <a href="#1" class="">
-        <span class="glyphicon glyphicon-chevron-down hidden-xs"></span>
-      </a>
+      <div class="flex-start">
+        <div>
+          <a href="#1">
+            <span class="glyphicon glyphicon-chevron-down hidden-xs"></span>
+          </a> 
+        </div>
+        <%= link_to "", "https://www.linkedin.com/in/julien-da-silva-a1aa5aa9/", class: 'fa fa-linkedin-square' %>
+        <%= link_to "", "https://github.com/juliends", class: 'fa fa-github-square' %>  
+      </div>
     </div> 
   </div>
 </div>
