--- a/source/stylesheets/layouts/_utilities.scss
+++ b/source/stylesheets/layouts/_utilities.scss
@@ -17,6 +17,11 @@ h4 {
   justify-content: center;
   align-items: center;
 }
+.flex-start {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
 .flex-space-around {
   display: flex;
   justify-content: space-around;
