--- a/source/stylesheets/components/_section_headers.scss
+++ b/source/stylesheets/components/_section_headers.scss
@@ -9,7 +9,7 @@
   h2 {
     letter-spacing: 0.04em;
     font-weight: 300;
-    color: #22A39F;
+    color: $green;
   }
    h6 {
     font-weight: 300;
