--- a/source/stylesheets/components/_abilities.scss
+++ b/source/stylesheets/components/_abilities.scss
@@ -31,14 +31,14 @@ li:hover {
   padding: 6px 20px;
   border-radius: 5px;
   background-color: transparent;
-  color: #22A39F;
+  color: $green;
   font-size: 16px;
-  border: 1px solid #22A39F;
+  border: 1px solid $green;
   text-decoration: none;
   transition: all 0.3s ease;
 }
 .btn-transparent-green:hover {
-  color: #22A39F;
+  color: $green;
   text-decoration: none;
   background-color: rgba(71,214,182,0.09);
 }
