--- a/source/stylesheets/components/_banner.scss
+++ b/source/stylesheets/components/_banner.scss
@@ -29,7 +29,7 @@
     margin-left: 0.3em;
   }
   .glyphicon-chevron-down, .fa-linkedin-square, .fa-github-square {
-    color: #42F2F7;
+    color: $brand-color;
     &:hover {
       text-decoration: none;
     }
