--- a/source/_profile.html.erb
+++ b/source/_profile.html.erb
@@ -3,10 +3,10 @@
     <div class="row">
       <div class="col-xs-12">
         <div class="section_headers" id="1">    
-        <% data.user.abilities.backend.each do |a, b| %>
+        <% data.skills.abilities.backend.each do |a, b| %>
           <p><%= a %>=<%= b %></p>
         <% end %>
-        <% data.user.abilities.frontend.each do |a, b| %>
+        <% data.skills.abilities.frontend.each do |a, b| %>
           <p><%= a %>=<%= b %></p>
         <% end %>
           <h2>Profile</h2>
@@ -29,18 +29,12 @@
       <div class="col-xs-12 col-md-3">
         <div class="unflex-mobile details">
           <h4>Details</h4>
-            <div class="attributes">
-              <p class="attribute-name-bold">Name:</p>
-              <p>Julien Da Silva</p>  
-            </div>
-            <div class="attributes">
-              <p class="attribute-name-bold">Age:</p>
-              <p>31</p>
-            </div>
-            <div class="attributes">
-              <p class="attribute-name-bold">Location:</p>
-              <p>Paris, France</p>
-            </div>
+            <% data.user.julien.each do |key, value| %>
+              <div class="attributes">
+                <p class="attribute-name-bold"><%= key %></p>
+                <p><%= value %></p>  
+              </div>
+            <% end %>
         </div>
       </div>
     </div>
