github button designed

--- a/source/_abilities.html.erb
+++ b/source/_abilities.html.erb
@@ -25,7 +25,8 @@
               </ul>
             </div>
           <% end %>
-        </div>     
+        </div>
+      <hr>     
       <h4 class="category-name">Front End</h4>
         <div class="row">
           <% data.skills.abilities.frontend.each_with_index do |hash, index| %>
@@ -46,9 +47,9 @@
           <% end %>
         </div>     
       <div class="row">
-        <div class="project-referal">
+        <div class="flex-column-center">
           <p id="italic">This project is build on a custom made Middleman framework.</p>
-          <%= link_to("See project on github", "https://github.com/Llanowars/jdasilva", class:"btn-transparent-green")  %>
+          <%= link_to("See project on github", "https://github.com/juliends/www", class:"btn-transparent-green")  %>
         </div>
       </div>
       <hr>
