--- a/source/stylesheets/layouts/_utilities.scss
+++ b/source/stylesheets/layouts/_utilities.scss
@@ -40,6 +40,11 @@ h4 {
   justify-content: space-around;
   align-items: center;
 }
+.flex-space-between {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 .flex-column-center {
   display: flex;
   flex-direction: column;
