--- a/source/stylesheets/components/_banner.scss
+++ b/source/stylesheets/components/_banner.scss
@@ -8,6 +8,8 @@
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  border-bottom-left-radius: 50% 15%;
+  border-bottom-right-radius: 50% 15%;
   .presentation {
     position: absolute;
     top: 18vh;
@@ -30,6 +32,7 @@
   }
   .glyphicon-chevron-down, .fa-linkedin-square, .fa-github-square {
     color: $brand-color;
+    font-size: 1.1em;
     &:hover {
       opacity: 0.6;
       text-decoration: none;
