card_project_design

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -15,6 +15,7 @@
     <%= partial "banner" %>
     <%= partial "profile" %>
     <%= partial "abilities" %>
+    <%= partial "projects" %>
     <%= yield %>
   </body>
 </html>
