--- a/source/stylesheets/layouts/_utilities.scss
+++ b/source/stylesheets/layouts/_utilities.scss
@@ -5,6 +5,9 @@ h4 {
   font-weight: 300;
   color: $green;
 }
+hr {
+  border: 1px solid rgba(114, 120, 120, 0.2);
+}
 #italic {
   font-style: italic;
   color: $gray;
