--- a/source/_projects.html.erb
+++ b/source/_projects.html.erb
@@ -13,8 +13,10 @@
         <% data.projects.apps.each do |project| %>
           <% project %>
         <% end %>
-        <div class="col-xs-12 col-sm-6">
-          <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(' https://www.aulo.io/assets/aulo_full_logo_metatag-95abd3de7c9aa5a34570e2843ea3fba89459232ce08e09590de9538cec953e94.png');">
+
+
+        <div class="col-xs-12">
+          <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://www.aulo.io/assets/aulo_full_logo_metatag-95abd3de7c9aa5a34570e2843ea3fba89459232ce08e09590de9538cec953e94.png');">
             <div class="card-description">
               <h2>Aulo</h2>
               <p>Parle à tes experts favoris en live vidéo sur Aulo</p>
@@ -22,6 +24,17 @@
             <%= link_to "", "https://www.aulo.io/", class: 'card-link' %>
           </div>       
         </div>
+        
+        <div class="col-xs-12">
+          <div class="keynote">
+            <img src="https://www.aulo.io/assets/aulo_full_logo_metatag-95abd3de7c9aa5a34570e2843ea3fba89459232ce08e09590de9538cec953e94.png" />
+            <div class="keynote-desc">
+              <p class="keynote-name">Aulo</p>
+              <p class="keynote-bio">Parle à tes experts favoris en live vidéo sur Aulo. <a href="https://www.aulo.io/" class="more">More Info</a></p>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
