navbar with style and some js

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -12,6 +12,7 @@
     <%= favicon_tag 'images/favicon.png' %>
   </head>
   <body>
+    <%= partial "navbar" %>
     <%= partial "banner" %>
     <%= partial "profile" %>
     <%= partial "abilities" %>
