--- a/source/_profile.html.erb
+++ b/source/_profile.html.erb
@@ -1,4 +1,4 @@
-<div class="wrapper-white">
+<div class="wrapper-white" id="navbar-appear-point">
   <div class="container padded">
     <div class="row">
       <div class="col-xs-12">
