navbar fixed top and flexitems

--- a/source/_navbar.html.erb
+++ b/source/_navbar.html.erb
@@ -1,5 +1,5 @@
  <div class="navbar hidden hidden-xs hidden-sm">
-  <ul class="list-unstyled">
+  <ul class="list-unstyled flex-space-around">
     <li><a href="#1">Profile</a></li>
     <li><a href="#2">Abilities</a></li>
     <li><a href="#3">Projects</a></li>
