background image on navbar

--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -3,6 +3,7 @@
   height: 4vh;
   min-height: 35px !important;
   background-color: #1B3B6F;
+  background-position: top;
   // #032B43, #1B3B6F, #1A535C
   position: fixed;
   z-index: 1;
